# vuln-scanner

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-web.txt  requirements.txt
.github/workflows/: pages.yml
examples/: scope.example.yaml
pages/: index.html
tests/: conftest.py  test_authorization.py  test_engine.py  test_http_headers_module.py  test_models.py  test_scope.py  test_static_engine.py  test_static_modules.py  test_tls_module.py  test_vuln_match.py  test_web_api.py
vulnscan/: __init__.py  __main__.py  cli.py
vulnscan/core/: __init__.py  aggregate.py  authorization.py  context.py  datafiles.py  engine.py  exceptions.py  models.py  module_base.py  ratelimit.py  registry.py  scope.py  versioning.py
vulnscan/data/: code_patterns.json  default_creds.json  dependency_vulns.json  secret_patterns.json  sensitive_paths.txt  subdomains.txt  vuln_signatures.json
vulnscan/modules/: __init__.py  default_creds.py  dns_checks.py  exposed_files.py  http_headers.py  injection_detect.py  port_scan.py  tls.py  vuln_match.py
vulnscan/plugins/: README.md  __init__.py
vulnscan/reporting/: __init__.py  console.py  html_report.py  json_report.py
vulnscan/static/: __init__.py  context.py  engine.py  module_base.py  repo.py
vulnscan/static/modules/: __init__.py  code_patterns.py  dependencies.py  secrets.py  sensitive_files.py
vulnscan/web/: __init__.py  __main__.py  app.py  jobs.py  service.py
vulnscan/web/static/: app.js  index.html  styles.css
