[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnscan"
version = "0.1.0"
description = "Modular vulnerability scanner for authorized security assessments (detection & reporting only)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Security Engineering" }]
keywords = ["security", "vulnerability-scanner", "pentest", "detection", "reporting"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "dnspython>=2.6,<3.0",
    "PyYAML>=6.0,<7.0",
    "colorama>=0.4.6,<0.5",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
web = ["fastapi>=0.110,<1.0", "uvicorn[standard]>=0.27"]

[project.scripts]
vulnscan = "vulnscan.cli:main"
vulnscan-web = "vulnscan.web.__main__:main"

[tool.setuptools.packages.find]
include = ["vulnscan*"]

[tool.setuptools.package-data]
vulnscan = ["data/*.txt", "data/*.json", "web/static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
